Fixed some bugs. Added some help messages.